tests/semantic_errors/testcase05.c
// invalid return type

int main(void) {
    return "3";
}